feat(appeals/api): add an api endpoint to get the site visit types
